--- a/src/static/telemetry-ui/package.json
+++ b/src/static/telemetry-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-vue-app",
+  "name": "telemetry-ui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.6.11"
+    "js-cookie": "^3.0.5",
+    "vue": "^3.5.13",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-service": "~4.5.0"
