--- a/src/static/telemetry-ui/package.json
+++ b/src/static/telemetry-ui/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "js-cookie": "^3.0.5",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
